--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "motion": "^12.6.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "recharts": "^2.15.1",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
