--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "date-fns": "^4.1.0",
-        "embla-carousel-react": "^8.5.2",
+        "embla-carousel-class-names": "^8.6.0",
+        "embla-carousel-react": "^8.6.0",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
